# F4SEVR_Plugin_Template

./: CMakeLists.txt  F4SE_plugin_template.sln  F4SE_plugin_template.vcxproj  F4SE_plugin_template.vcxproj.filters  README.md  exports.def  main.cpp
cmake/: headerlist.cmake  sourcelist.cmake  versioning.cmake
include/: version.h
